# cuaderno

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  STATUS.md  codecov.yml  justfile
.cuaderno/: index.db
.cuaderno/templates/: daily.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/cdno-cli/: Cargo.toml
crates/cdno-cli/src/: bootstrap.rs  completions.rs  lib.rs  main.rs  output.rs  prompt.rs
crates/cdno-cli/src/commands/: action.rs  capture.rs  commit.rs  commitments.rs  file.rs  frontmatter.rs  init.rs  lint.rs  log.rs  mod.rs  monthly.rs  normalise.rs  note.rs  orient.rs  portfolio.rs  project.rs  question.rs  questions.rs  reindex.rs  review.rs  search.rs  status.rs  stewardship.rs  templates.rs  track.rs  triage.rs  weekly.rs
crates/cdno-cli/templates/: daily.md  default_config.toml
crates/cdno-cli/tests/: action.rs  bootstrap.rs  capture.rs  cli.rs  commit.rs  completions.rs  frontmatter.rs  init.rs  lint.rs  log.rs  monthly.rs  note.rs  orient.rs  output.rs  portfolio.rs  project.rs  prompt.rs  question.rs  search.rs  stewardship.rs  templates.rs  track.rs  weekly.rs
crates/cdno-core/: Cargo.toml  SCHEMA.md
crates/cdno-core/migrations/: 001_initial.sql  002_fts5_search.sql  002_milestones.sql  003_archived_action_snapshots.sql
crates/cdno-core/src/: artefacts.rs  config.rs  config_edit.rs  error.rs  extractors.rs  file_meta.rs  frontmatter.rs  hash.rs  index.rs  lib.rs  markdown.rs  note_type.rs  path.rs  paths.rs  reconcile.rs  store.rs  template.rs  transaction.rs  watcher.rs
crates/cdno-core/tests/: unit.rs
crates/cdno-core/tests/unit/: artefacts_tests.rs  config_edit_tests.rs  config_tests.rs  deadlines_tests.rs  extractors_tests.rs  file_meta_tests.rs  frontmatter_tests.rs  fs_store_tests.rs  fts_search_tests.rs  hash_tests.rs  index_tests.rs  markdown_tests.rs  memory_index_tests.rs  memory_store_tests.rs  milestones_tests.rs  path_tests.rs  paths_tests.rs  reconcile_tests.rs  store_tests.rs  template_tests.rs  transaction_tests.rs  vault_index_tests.rs  watcher_tests.rs
crates/cdno-domain/: Cargo.toml
crates/cdno-domain/src/: bootstrap.rs  error.rs  lib.rs  lint.rs  note_type.rs  recurrence.rs  type_registry.rs  vault.rs
crates/cdno-domain/src/frontmatter/: action.rs  commitment.rs  context.rs  evidence.rs  mod.rs  portfolio.rs  project.rs  question.rs  stewardship.rs  tracking.rs
crates/cdno-domain/src/vault/: actions.rs  capture.rs  commitments.rs  config.rs  context.rs  custom_notes.rs  daily.rs  index_entry.rs  links.rs  lint.rs  log.rs  mod.rs  monthly.rs  normalise.rs  notes.rs  orient.rs  portfolios.rs  projects.rs  questions.rs  search.rs  set_frontmatter.rs  slug.rs  slug_hint.rs  stewardships.rs  templating.rs  tracking.rs  weekly.rs  write_outcome.rs
crates/cdno-domain/src/vault/projects/: actions.rs  lifecycle.rs  milestones.rs  mod.rs  state.rs  summary.rs  waiting.rs
crates/cdno-domain/templates/: action.md  commitment.md  evidence.md  inbox.md  monthly.md  portfolio.md  project.md  question.md  stewardship.md  weekly.md
crates/cdno-domain/templates/tracking/: generic.md  gym.md
crates/cdno-domain/tests/: unit.rs
crates/cdno-domain/tests/unit/: actions_tests.rs  capture_tests.rs  commitments_tests.rs  concurrency_tests.rs  config_tests.rs  context_tests.rs  custom_notes_tests.rs  daily_tests.rs  frontmatter_tests.rs  links_tests.rs  lint_tests.rs  monthly_tests.rs  normalise_tests.rs  note_type_tests.rs  notes_tests.rs  orient_tests.rs  portfolios_tests.rs  projects_tests.rs  questions_tests.rs  recurrence_tests.rs  search_tests.rs  set_frontmatter_tests.rs  stewardships_tests.rs  templating_tests.rs  tracking_tests.rs  type_registry_tests.rs  vault_tests.rs  weekly_tests.rs
crates/cdno-mcp/: Cargo.toml
crates/cdno-mcp/src/: access.rs  bootstrap.rs  checkpoint.rs  context.rs  creation.rs  dto.rs  input.rs  lib.rs  lifecycle.rs  operations.rs  server.rs  smoke.rs  startup.rs  util.rs
crates/cdno-mcp/tests/: e2e_access.rs  e2e_git_checkpoint.rs  e2e_http.rs  e2e_stdio.rs  handlers_context.rs  handlers_operations.rs  server.rs  startup.rs
crates/cdno-tauri/: Cargo.toml  tauri.conf.json
crates/cdno-tauri/capabilities/: capture.json  main.json
crates/cdno-tauri/icons/: icon.icns
crates/cdno-tauri/src/: clock.rs  deeplink.rs  error.rs  events.rs  lib.rs  main.rs  mouse_nav.rs  state.rs  tray.rs  vault_locator.rs  watcher.rs  with_vault.rs
crates/cdno-tauri/src/commands/: actions.rs  calendar.rs  capture.rs  commitments.rs  config.rs  custom_css.rs  mod.rs  notes.rs  orientation.rs  portfolios.rs  projects.rs  questions.rs  search.rs  stewardships.rs  strategic.rs  templates.rs  weekly.rs
crates/cdno-tauri/tests/: unit.rs
crates/cdno-tauri/tests/unit/: actions_tests.rs  calendar_tests.rs  commitments_tests.rs  config_tests.rs  deeplink_tests.rs  error_tests.rs  events_tests.rs  external_url_tests.rs  ipc_tests.rs  journal_tests.rs  notes_asset_tests.rs  orientation_tests.rs  portfolios_tests.rs  projects_tests.rs  questions_tests.rs  stewardships_tests.rs  strategic_tests.rs  vault_locator_tests.rs  watcher_plan_tests.rs  weekly_tests.rs
docs/: cli-ergonomics.md  design.md  implementation-plan.md
docs-site/: .gitignore  README.md  book.toml
docs-site/src/: SUMMARY.md  introduction.md
docs-site/src/concepts/: business-rules.md  configuration.md  contexts-and-energy.md  note-types.md  rlm.md  vault-structure.md
docs-site/src/getting-started/: config-editor.md  connect-to-claude.md  desktop-app.md  initialise-a-vault.md  installation.md  quickstart.md
docs-site/src/reference/: configuration.md  custom-note-types.md  frontmatter.md  json-output.md  recurrence.md  troubleshooting.md
examples/note-types/: README.md
examples/skills/: README.md
skills/: install.sh
skills/add-action/: SKILL.md
skills/complete-action/: SKILL.md
skills/daily-orientation/: SKILL.md
skills/quick-capture/: SKILL.md
skills/references/: ADHD-PRINCIPLES.md
ui/: capture.html  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx
(+265 files in other folders)
