[workspace]
resolver = "2"
members = ["crates/cdno-core", "crates/cdno-domain", "crates/cdno-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/agustinvalencia/cuaderno"

[workspace.dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false }

# SQLite index. The "bundled" feature ships its own libsqlite3 so
# builds don't depend on the system library; upgrade path to the
# r2d2-sqlite pool lives alongside, commented for future use.
rusqlite = { version = "0.32", features = ["bundled"] }

# Non-cryptographic hashing for content-change detection. xxh3 is the
# only variant we use; feature-gating keeps compile time down.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Binary-only error glue. Library crates use thiserror; the CLI
# translates structured errors into human-readable output here.
anyhow = "1"

# Test fixtures shared across crates.
tempfile = "3"

# CLI integration testing.
assert_cmd = "2"
predicates = "3"

# Internal crates
cdno-core = { path = "crates/cdno-core" }
cdno-domain = { path = "crates/cdno-domain" }
