[workspace]
resolver = "2"
members = [
    "crates/cdno-core",
    "crates/cdno-domain",
    "crates/cdno-cli",
    "crates/cdno-mcp",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/agustinvalencia/cuaderno"

[workspace.dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false }

# SQLite index. The "bundled" feature ships its own libsqlite3 so
# builds don't depend on the system library; upgrade path to the
# r2d2-sqlite pool lives alongside, commented for future use.
rusqlite = { version = "0.32", features = ["bundled"] }

# Non-cryptographic hashing for content-change detection. xxh3 is the
# only variant we use; feature-gating keeps compile time down.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Shell completion script generation + dynamic per-flag value
# completion. The `unstable-dynamic` feature gates the runtime
# completion engine (env-var-detected, returns candidates without
# launching the full app); it's still flagged unstable upstream but
# the API surface we touch (`CompleteEnv`, `ArgValueCompleter`,
# `CompletionCandidate`) has been stable for several minor releases.
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Interactive CLI prompts (fuzzy selectors, calendar widgets, confirms)
# applied for missing-but-required-in-TTY args. CLI-only; library and
# domain crates never see prompts.
inquire = { version = "0.7", features = ["date"] }

# Binary-only error glue. Library crates use thiserror; the CLI
# translates structured errors into human-readable output here.
anyhow = "1"

# Test fixtures shared across crates.
tempfile = "3"

# CLI integration testing.
assert_cmd = "2"
predicates = "3"

# Official Rust SDK for the Model Context Protocol. Provides the
# `#[tool]` / `#[tool_router]` macros, the `ServerHandler` trait, the
# `ServiceExt::serve(transport)` runtime, and the stdio transport.
# Default features include `server` (server-side trait machinery +
# schemars), `macros`, and base64.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

# JSON Schema derives for the typed MCP I/O. Pinned to the same major
# version rmcp 1.7 uses so the dependency graph stays single-version
# (the `JsonSchema` derive macro's hygiene expects a top-level
# `schemars` crate; the `rmcp::schemars` re-export alone isn't
# enough). Cargo's normal version resolution picks the matching 1.x
# minor.
schemars = { version = "1", features = ["chrono04"] }

# Async runtime for rmcp. The domain layer stays synchronous; tokio
# only lives in the MCP transport layer (and, later, the HTTP server
# and Tauri).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

# Structured logging for the MCP server binary. Writes to stderr
# (never stdout — stdio is the JSON-RPC channel). Filter via the
# RUST_LOG env var so users can debug a real Claude session without
# rebuilding (e.g. RUST_LOG=cdno_mcp=debug).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
cdno-core = { path = "crates/cdno-core" }
cdno-domain = { path = "crates/cdno-domain" }
cdno-mcp = { path = "crates/cdno-mcp" }
