[workspace]
resolver = "2"
members = [
    "crates/cdno-core",
    "crates/cdno-domain",
    "crates/cdno-cli",
    "crates/cdno-mcp",
    "crates/cdno-tauri",
]

[workspace.package]
version = "0.17.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/agustinvalencia/cuaderno"

[workspace.dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false }

# Glob matching for the config `ignore` list. Compiles a set of
# gitignore-style patterns into one matcher; kept behind cdno-core's
# `IgnoreSet` newtype so the dependency never leaks into other crates.
globset = "0.4"

# SQLite index. The "bundled" feature ships its own libsqlite3 so
# builds don't depend on the system library; upgrade path to the
# r2d2-sqlite pool lives alongside, commented for future use.
rusqlite = { version = "0.32", features = ["bundled"] }

# Non-cryptographic hashing for content-change detection. xxh3 is the
# only variant we use; feature-gating keeps compile time down.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Shell completion script generation + dynamic per-flag value
# completion. The `unstable-dynamic` feature gates the runtime
# completion engine (env-var-detected, returns candidates without
# launching the full app); it's still flagged unstable upstream but
# the API surface we touch (`CompleteEnv`, `ArgValueCompleter`,
# `CompletionCandidate`) has been stable for several minor releases.
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Interactive CLI prompts (fuzzy selectors, calendar widgets, confirms)
# applied for missing-but-required-in-TTY args. CLI-only; library and
# domain crates never see prompts.
inquire = { version = "0.7", features = ["date", "editor"] }

# Tabular CLI output with automatic content wrapping. Default features
# include `tty` (terminal-width auto-detection via crossterm) and
# `custom_styling`. CLI-only — presentation never leaks into the domain
# layer, and the MCP stdout JSON-RPC channel never touches table code.
comfy-table = "7.2"

# Binary-only error glue. Library crates use thiserror; the CLI
# translates structured errors into human-readable output here.
anyhow = "1"

# Atomic-write temp files (cdno-core runtime, GH #303) + test fixtures
# shared across crates.
tempfile = "3"

# CLI integration testing.
assert_cmd = "2"
predicates = "3"

# Official Rust SDK for the Model Context Protocol. Provides the
# `#[tool]` / `#[tool_router]` macros, the `ServerHandler` trait, the
# `ServiceExt::serve(transport)` runtime, and the stdio transport.
# Default features include `server` (server-side trait machinery +
# schemars), `macros`, and base64.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

# JSON Schema derives for the typed MCP I/O. Pinned to the same major
# version rmcp 1.7 uses so the dependency graph stays single-version
# (the `JsonSchema` derive macro's hygiene expects a top-level
# `schemars` crate; the `rmcp::schemars` re-export alone isn't
# enough). Cargo's normal version resolution picks the matching 1.x
# minor.
schemars = { version = "1", features = ["chrono04"] }

# Async runtime for rmcp. The domain layer stays synchronous; tokio
# only lives in the MCP transport layer (and, later, the HTTP server
# and Tauri).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

# Structured logging for the MCP server binary. Writes to stderr
# (never stdout — stdio is the JSON-RPC channel). Filter via the
# RUST_LOG env var so users can debug a real Claude session without
# rebuilding (e.g. RUST_LOG=cdno_mcp=debug).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP scaffolding for the `cdno-mcp-server` binary (GH #60/#61).
# rmcp's `StreamableHttpService` is a tower `Service`; axum mounts it
# at `/mcp` (`route_service`) and, later, carries the origin-auth
# middleware (GH #302). Default features only — no TLS: transport
# security terminates at the fronting proxy, never at this binary.
axum = "0.8"

# Transport-layer guardrails for `cdno-mcp-server` (2026-07-05
# security review of PR #304). `tower-http`'s RequestBodyLimitLayer
# wraps the request *body* so rmcp's raw `collect()` hits the cap —
# axum's extractor-gated default limit does NOT apply on this path.
# `tower`'s ConcurrencyLimitLayer bounds in-flight requests, since
# tool handlers still run blocking domain calls on runtime workers
# (see GH #303).
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit"] }

# HTTP client for cdno-mcp-server's JWKS fetch (GH #302) and the e2e
# tests. rustls so builds never link the system OpenSSL (the server
# container is a minimal Linux image).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Validation of the identity JWT Cloudflare Access injects toward the
# origin (`Cf-Access-Jwt-Assertion`, GH #302). RS256 against the team
# JWKS; the server never issues tokens, only verifies.
jsonwebtoken = "9" 

# Filesystem watching for live consumers (the desktop app's watcher
# thread, GH Phase 5). `notify` provides the platform backends
# (FSEvents on macOS); the mini debouncer coalesces editor
# atomic-save storms (write + rename) into one batch per window.
# Kept behind cdno-core's `FileWatcher` trait so the dependency never
# leaks into other crates.
notify = "8"
notify-debouncer-mini = "0.6"

# Desktop app shell (GH #53, Phase 5). The Tauri commands are thin
# wrappers over cdno-domain methods — no DTO layer; domain types
# serialise directly over the IPC bridge. `macos-private-api` matches
# tauri.conf.json's macOSPrivateApi (transparent capture window);
# accepted cost: no Mac App Store distribution. `tray-icon` backs the
# minimal menu-bar tray (M10); the tray reuses the codegen-embedded
# app icon, so no `image-png` runtime decoding is needed.
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-build = "2"

# Global capture hotkey (⌘⇧C, M3). Registered from Rust `setup()` —
# JS registration is racy — so no JS capability is needed. Summons the
# dedicated capture window app-wide.
tauri-plugin-global-shortcut = "2"

# Single-instance guard (M3). Registered FIRST in the builder chain
# (the plugin's hard requirement); a second launch focuses the running
# main window instead of spawning a duplicate app.
tauri-plugin-single-instance = "2"

# Open a note in the user's default editor (M3 "open in editor"). The
# only file access that bypasses the domain layer — guarded by a
# VaultPath check before the vault-root join so it can't escape.
tauri-plugin-opener = "2"

# Native folder picker + message dialogs for first-launch vault
# discovery (GH #331). A Finder-launched app inherits no shell
# environment, so `CUADERNO_VAULT_PATH` is unset and the app used to
# abort silently; the picker gives it a vault instead. Invoked from
# Rust `setup()` (via a background thread — the blocking pick posts to
# the main event loop, which is not pumping while `setup` runs), so no
# JS capability is needed — same as the opener plugin.
tauri-plugin-dialog = "2"

# Lock-free atomic swap for the desktop app's live-reloadable vault
# (GH #365, PR2). `AppState.vault` is an `ArcSwap<Vault>` so a config
# save can rebuild the vault (same store/index, fresh config) and swap
# it in without a restart; in-flight commands finish against the Arc
# they loaded. Read-mostly and never blocks — a config reload is rare
# versus the vault reads every command performs.
arc-swap = "1"

# TypeScript bindings generated from the Rust wire types (plan §3.5).
# `serde-compat` (default) honours the serde attrs; `chrono-impl` maps
# NaiveDate to `string`. Optional everywhere — only the `ts-bindings`
# feature (a codegen-time concern) pulls it in.
ts-rs = { version = "12", features = ["chrono-impl"] }

# Internal crates
cdno-core = { path = "crates/cdno-core" }
cdno-domain = { path = "crates/cdno-domain" }
cdno-mcp = { path = "crates/cdno-mcp" }
