[package]
name = "cdno-core"
description = "Core library for Cuaderno: file I/O, markdown parsing, SQLite indexing, file watching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
rusqlite.workspace = true
