[package]
name = "cdno-core"
description = "Core library for Cuaderno: file I/O, markdown parsing, SQLite indexing, file watching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
globset.workspace = true
rusqlite.workspace = true
xxhash-rust.workspace = true
# Runtime dependency since GH #303: FsVaultStore materialises every
# content write in a NamedTempFile in the target's directory and
# renames it over the destination — atomic, crash-safe writes.
tempfile.workspace = true

[dev-dependencies]
rusqlite.workspace = true
