[package]
name = "cdno-core"
description = "Core library for Cuaderno: file I/O, markdown parsing, SQLite indexing, file watching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
globset.workspace = true
rusqlite.workspace = true
xxhash-rust.workspace = true
# Runtime dependency since GH #303: FsVaultStore materialises every
# content write in a NamedTempFile in the target's directory and
# renames it over the destination — atomic, crash-safe writes.
tempfile.workspace = true
# Filesystem watching (FileWatcher trait + FsFileWatcher). See the
# workspace manifest for the rationale.
notify.workspace = true
notify-debouncer-mini.workspace = true
ts-rs = { workspace = true, optional = true }

[features]
# TypeScript bindings for the config leaf structs the desktop app's
# structured Config view embeds (#365, PR5a). Codegen-only: off for
# CLI/MCP builds, enabled transitively when cdno-tauri regenerates
# ui/src/api/bindings/ (its ts-bindings turns on cdno-domain's, which
# turns on this).
ts-bindings = ["dep:ts-rs"]

[dev-dependencies]
rusqlite.workspace = true
