[package]
name = "cdno-domain"
description = "Domain logic for Cuaderno: note types, business rules, queries, state transitions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdno-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }
chrono.workspace = true
# Parsing a candidate `.cuaderno/config.toml` for the read-only config
# inspector's dry-run validator (#365) — the same `toml::from_str`
# `VaultConfig::load` runs, composed here without touching disk.
toml.workspace = true

[features]
# TypeScript bindings for the types the desktop app's wire surface
# embeds. Codegen-only: off for CLI/MCP builds, on when cdno-tauri
# regenerates ui/src/api/bindings/. Turns on cdno-core's own bindings
# so the config leaf structs (VaultMeta, FieldSpec, …) the structured
# Config view embeds derive `TS` too (#365, PR5a).
ts-bindings = ["dep:ts-rs", "cdno-core/ts-bindings"]

[dev-dependencies]
tempfile.workspace = true
